Mon Sep 23 09:55:22 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* options.h.in: Fixed some typos in the comments and reindented
 	them.

Sat Sep 21 02:33:26 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* sanity.sh: If we're testing remote CVS, make sure rsh itself is
	working before running any tests.  It's confusing when basica-1
	fails just because you don't have the local host in your .rhosts
	file.

Thu Sep 19 09:15:41 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Define SERVER_FLOWCONTROL, SERVER_HI_WATER,
	SERVER_LO_WATER.  Several large sites (FreeBSD, Cygnus) have been
	pounding on this code without problems, and it doesn't seem to
	have any significant downsides.

Tue Sep 17 01:13:41 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* status.c (status_fileproc): Instead of a default case, set sstat
	before the switch.  This way gcc -Wall can detect a missed case.
	Add explicit T_TITLE case.

Tue Sep 17 00:09:44 1996  Assar Westerlund  <assar@pdc.kth.se>

	* login.c (login): Print usage if argc < 0.

Tue Sep 17 00:09:44 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* lock.c: In comment, mention one more function of readlocks
	(fileattr not updated atomically).  Note similarity between
	solutions #2 and #5.

	* checkout.c (safe_location): Do not reject a location merely
	because it textually starts with hardpath; insist that it be
	hardpath or a subdirectory thereof.

Mon Sep 16 11:46:36 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_cleanup): Add comment about ignoring errors
	from unlink_file_dir.

Mon Sep 16 10:31:48 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c: Add support for -T <tmpdir> command line option.  This
 	is needed for servers started via inetd.
	(usg): Added line for -T.  Improved -z documentation.
	(main): Read default for tmpdir from the environment. Test for 'T'
	in getopt loop.  Use '/tmp' as ultimative fallback.  Update
	environment if possible.
